--- a/demo/index.html
+++ b/demo/index.html
@@ -104,7 +104,7 @@
         </div>
     </div><!--/container-->
     
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="../equal-row-height.js"></script>
     <script>
       $('.fix-me').equalRowHeight();
